# SkyWizz

./: .dockerignore  .env.template  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  README.md  SkyWizz.py  bot.py  docker-compose.yml  index.html  main.py  objects.inv  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  labeler.yml  mkdocs-pip.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-label.yml  build-documentation.yml
about/code_of_conduct/: index.html
about/release-notes/: index.html
functions/: airport_functions.py  main.py
gui/: SkyWizz.py  gui.py
mkdocs/: mkdocs.yml
mkdocs/docs/about/: code_of_conduct.md  license.md  release-notes.md
mkdocs/docs/skywizz/: calculator_commands.md  general_commands.md  help_commands.md  meme_commands.md  networking_commands.md  reminder_commands.md  weather_commands.md
mkdocs/docs/user-guide/: dependencies.md  installation.md
mkdocs/site/: 404.html  index.html  objects.inv
mkdocs/site/about/contributing/: index.html
mkdocs/site/about/license/: index.html
mkdocs/site/skywizz/calculator_commands/: index.html
skywizz/: __init__.py  config.py  db.py  events.py  logger.py  messages.py  setup.py
skywizz/calculator_commands/: index.html
skywizz/cogs/: __init__.py  calculator_commands.py  general_commands.py  help_commands.py  meme_commands.py  moderation_commands.py  networking_commands.py  reminder_commands.py  utility_commands.py  weather_commands.py
skywizz/cogs/economy/: bank.py
skywizz/cogs/utils/: exceptions.py
skywizz/config/: db.json
skywizz/general_commands/: index.html
skywizz/help_commands/: index.html
skywizz/meme_commands/: index.html
skywizz/networking_commands/: index.html
skywizz/reminder_commands/: index.html
skywizz/tools/: __init__.py  embed.py
skywizz/weather_commands/: index.html
src/: bot.py  requirements.txt
src/cogs/: airport_commands.py  calculator_commands.py  general_commands.py  help_cog.py  meme_commands.py  networking_commands.py  reminder_commands.py  weather_commands.py
src/cogs/utils/: airport_functions.py  constants.py  exceptions.py  utility_functions.py
src/discord/: bot.py
src/discord/cogs/: airport_commands.py  calculator_commands.py  commands.py
src/skywizz/: SkyWizz.py
src/utils/: airport_functions.py  utils.py
(+8 files in other folders)
