[project]
name = "skywizz"
version = "0.1.0"
description = "SkyWizz Discord Bot"
authors = [
    {name = "Mário Cao",email = "kreativermario@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp (>=3.11.13)",
    "aiosignal (>=1.3.2)",
    "attrs (>=24.3.0)",
    "build (>=1.2.2)",
    "certifi (>=2025.1.31)",
    "charset-normalizer (>=3.4.1)",
    "click (>=8.1.8)",
    "colorlog (>=6.9.0)",
    "contourpy (>=1.3.1)",
    "cycler (>=0.12.1)",
    "dateutils (>=0.6.12)",
    "discord-py (>=2.5.2)",
    "emoji (>=2.14.1)",
    "fonttools (>=4.56.0)",
    "frozenlist (>=1.5.0)",
    "future (>=1.0.0)",
    "idna (>=3.10)",
    "kiwisolver (>=1.4.8)",
    "matplotlib (>=3.10.1)",
    "multidict (>=6.1.0)",
    "numpy (>=2.2.3)",
    "packaging (>=24.2)",
    "pandas (>=2.2.3)",
    "pillow (>=11.1.0)",
    "pip-autoremove (>=0.10.0)",
    "pip-tools (>=7.4.1)",
    "pyparsing (>=3.2.1)",
    "pyproject-hooks (>=1.2.0)",
    "python-dateutil (>=2.9.0)",
    "python-dotenv (>=1.0.1)",
    "python-whois (>=0.9.5)",
    "pytz (>=2025.1)",
    "pyupgrade (>=3.19.0)",
    "requests (>=2.32.3)",
    "six (>=1.17.0)",
    "tokenize-rt (>=6.1.0)",
    "tzdata (>=2025.1)",
    "urllib3 (>=2.3.0)",
    "yarl (>=1.18.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
aiohttp = ">=3.11.13"
aiosignal = ">=1.3.2"
attrs = ">=24.3.0"
build = ">=1.2.2"
certifi = ">=2025.1.31"
charset-normalizer = ">=3.4.1"
click = ">=8.1.8"
colorlog = ">=6.9.0"
contourpy = ">=1.3.1"
cycler = ">=0.12.1"
dateutils = ">=0.6.12"
discord-py = ">=2.5.2"
emoji = ">=2.14.1"
fonttools = ">=4.56.0"
frozenlist = ">=1.5.0"
future = ">=1.0.0"
idna = ">=3.10"
kiwisolver = ">=1.4.8"
matplotlib = ">=3.10.1"
multidict = ">=6.1.0"
numpy = ">=2.2.3"
packaging = ">=24.2"
pandas = ">=2.2.3"
pillow = ">=11.1.0"
pip-autoremove = ">=0.10.0"
pip-tools = ">=7.4.1"
pyparsing = ">=3.2.1"
pyproject-hooks = ">=1.2.0"
python-dateutil = ">=2.9.0"
python-dotenv = ">=1.0.1"
python-whois = ">=0.9.5"
pytz = ">=2025.1"
pyupgrade = ">=3.19.0"
requests = ">=2.32.3"
six = ">=1.17.0"
tokenize-rt = ">=6.1.0"
tzdata = ">=2025.1"
urllib3 = ">=2.3.0"
yarl = ">=1.18.3"

